--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
         <meta charset="UTF=8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Soba Noodle with Marinara Sauce</title>
+        <title>Soba Culture</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    
+        <h1>Soba Culture</h1>
+        <img src='images/Soba noodles.jpg' alt="Soba noodles with sesame" width="200" height="200">
+        <h3>Soba noodles are a type of thin Japanese noodles made from buckwheat flour. They have a long history in Japanese cuisine and are a popular and versatile ingredient in various dishes.</h3>
+        <h3>Here's a brief overview of the history of soba noodles:</h3>
+        <ul>
+            <li><h3>Origins:</h3></li>
+            <p>The origins of soba noodles can be traced back to ancient China, where noodles made from various grains and legumes were common. Around the 8th century, soba noodles were introduced to Japan through cultural and trade exchanges with China. However, the noodles were initially made from other grains like wheat or millet.</p>
+            <li><h3>Introduction of Buckwheat:</h3></li>
+            <p>The use of <strong>buckwheat</strong> in soba noodles is believed to have begun during the Kamakura period (1185-1333) in Japan.<strong>Buckwheat</strong>, known as "soba" in Japanese, was brought to Japan from China and quickly gained popularity due to its adaptability to different climates and soil conditions.<strong>Buckwheat</strong> became a staple crop, particularly in mountainous regions where rice cultivation was difficult.
+            </p>
+            <li><h3>Development of Soba Noodles:</h3></li>
+            <p>As buckwheat cultivation spread across Japan, people began experimenting with different ways to utilize the grain. In the 16th century, the technique of milling buckwheat into flour and using it to make noodles gained prominence. This marked the beginning of the soba noodle as we know it today.
+            Soba noodles gained popularity as a nutritious and affordable food option, especially among the common people. They were not only consumed at home but also became a common street food, often served at food stalls and small restaurants.</p>
+            <li><h3>Cultural Significance:</h3></li>
+            <p>Soba noodles hold cultural significance in Japan and are associated with various traditions and rituals. For example, eating soba noodles on New Year's Eve became a customary practice to bid farewell to the old year and welcome the new year with good fortune. This tradition, known as <strong>"Toshikoshi Soba,"</strong> is still observed by many Japanese households.</p>
+            <li><h3>Types of Soba Noodles:</h3></li>
+            <li><h3>There are different types of soba noodles based on the ratio of buckwheat to wheat flour used in the dough. The most common types are:</h3></li>
+        </ul>
+        <ol>
+                      <li><p><strong>Nihon-soba</strong>: Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
+                      <li><p><strong>Chuka-soba</strong>: These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
+                      <p>In recent years, soba noodles have gained international popularity due to their unique taste, nutritional value, and gluten-free nature (though some commercial soba noodles may contain wheat flour). They are commonly enjoyed cold with a dipping sauce (<strong>zaru soba</strong>) or in a hot broth (<strong>kake soba</strong>).Overall, soba noodles have a rich history in Japan, evolving from their Chinese origins to become a beloved and versatile staple in Japanese cuisine.</p>
+            
+        </ol>
         <script src="index.js"></script>
     </body>
 </html>
