fixed an error for the recipe/nihon-soda tab

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     
-        <h1>Soba Culture</h1>
+        <h1 id='header'>Soba Culture</h1>
         <img src='images/Soba noodles.jpg' alt="Soba noodles with sesame" width="200" height="200">
         <h3>Soba noodles are a type of thin Japanese noodles made from buckwheat flour. They have a long history in Japanese cuisine and are a popular and versatile ingredient in various dishes.</h3>
         <h3>Here's a brief overview of the history of soba noodles:</h3>
@@ -28,8 +28,8 @@
             <li><h3>There are different types of soba noodles based on the ratio of buckwheat to wheat flour used in the dough. The most common types are:</h3></li>
         </ul>
         <ol>
-                      <li><a href='recipes/Nihon-soba.html'>Nihon soba</a> Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
-                      <li><a href='recipes/Chuka-soba.html'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
+                      <li><a href='recipes/Nihon-soda.html'>Nihon soba</a> Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
+                      <li><a href='recipes/Chuka-soba.htmlgi'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
                       <p>In recent years, soba noodles have gained international popularity due to their unique taste, nutritional value, and gluten-free nature (though some commercial soba noodles may contain wheat flour). They are commonly enjoyed cold with a dipping sauce (<strong>zaru soba</strong>) or in a hot broth (<strong>kake soba</strong>).Overall, soba noodles have a rich history in Japan, evolving from their Chinese origins to become a beloved and versatile staple in Japanese cuisine.</p>
             
         </ol>
