fixed an error for the recipe/chuba-soda tab

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
         <ol>
                       <li><a href='recipes/Nihon-soda.html'>Nihon soba</a> Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
-                      <li><a href='recipes/Chuka-soba.htmlgi'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
+                      <li><a href='recipes/Chuka-soba.html'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
                       <p>In recent years, soba noodles have gained international popularity due to their unique taste, nutritional value, and gluten-free nature (though some commercial soba noodles may contain wheat flour). They are commonly enjoyed cold with a dipping sauce (<strong>zaru soba</strong>) or in a hot broth (<strong>kake soba</strong>).Overall, soba noodles have a rich history in Japan, evolving from their Chinese origins to become a beloved and versatile staple in Japanese cuisine.</p>
             
         </ol>
