--- a/recipes/Nihon-soda.html
+++ b/recipes/Nihon-soda.html
@@ -1,3 +1,5 @@
 <main>
-    <h1 id='header'>Nihon soda</h1>
+    <h1 id='header'>Nihon soba</h1>
+    <img src='images/nihon_soba.jpg' alt="An amazing plate of nihon soba
+    ">
 </main>
