--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <img src='images/Soba noodles.jpg' alt="Soba noodles with sesame" width="200" height="200">
         <h3>Soba noodles are a type of thin Japanese noodles made from buckwheat flour. They have a long history in Japanese cuisine and are a popular and versatile ingredient in various dishes.</h3>
         <h3>Here's a brief overview of the history of soba noodles:</h3>
-        <ul>
+        <div>
+         <ul>
             <li><h3>Origins:</h3></li>
             <p>The origins of soba noodles can be traced back to ancient China, where noodles made from various grains and legumes were common. Around the 8th century, soba noodles were introduced to Japan through cultural and trade exchanges with China. However, the noodles were initially made from other grains like wheat or millet.</p>
             <li><h3>Introduction of Buckwheat:</h3></li>
@@ -26,13 +27,16 @@
             <p>Soba noodles hold cultural significance in Japan and are associated with various traditions and rituals. For example, eating soba noodles on New Year's Eve became a customary practice to bid farewell to the old year and welcome the new year with good fortune. This tradition, known as <strong>"Toshikoshi Soba,"</strong> is still observed by many Japanese households.</p>
             <li><h3>Types of Soba Noodles:</h3></li>
             <li><h3>There are different types of soba noodles based on the ratio of buckwheat to wheat flour used in the dough. The most common types are:</h3></li>
-        </ul>
-        <ol>
-                      <li><a href='recipes/Nihon-soda.html'>Nihon soba</a> Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
-                      <li><a href='recipes/Chuka-soba.html'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
-                      <p>In recent years, soba noodles have gained international popularity due to their unique taste, nutritional value, and gluten-free nature (though some commercial soba noodles may contain wheat flour). They are commonly enjoyed cold with a dipping sauce (<strong>zaru soba</strong>) or in a hot broth (<strong>kake soba</strong>).Overall, soba noodles have a rich history in Japan, evolving from their Chinese origins to become a beloved and versatile staple in Japanese cuisine.</p>
+         </ul>
+         
+            <ol>
+                    <li><a href='recipes/Nihon-soda.html'>Nihon soba</a> Made primarily from buckwheat flour, these noodles have a distinct nutty flavor and a darker color.</p></li>
+                    <li><a href='recipes/Chuka-soba.html'>Chuka soba</a> These noodles contain a higher proportion of wheat flour, resulting in a lighter color and milder taste. They are often used in stir-fried dishes or in ramen-style soups.</p></li>
+                    <p>In recent years, soba noodles have gained international popularity due to their unique taste, nutritional value, and gluten-free nature (though some commercial soba noodles may contain wheat flour). They are commonly enjoyed cold with a dipping sauce (<strong>zaru soba</strong>) or in a hot broth (<strong>kake soba</strong>).Overall, soba noodles have a rich history in Japan, evolving from their Chinese origins to become a beloved and versatile staple in Japanese cuisine.</p>
             
-        </ol>
+            </ol>
+        </div>
+        <a href="#header">Return to top</a>
         <script src="index.js"></script>
     </body>
 </html>
