--- a/recipes/Nihon-soda.html
+++ b/recipes/Nihon-soda.html
@@ -1,5 +1,4 @@
 <main>
     <h1 id='header'>Nihon soba</h1>
-    <img src='images/nihon_soba.jpg' alt="An amazing plate of nihon soba
-    ">
+    <img src="images/nihon_soba.jpg" alt="Nihon soba" width="200" height="200">
 </main>
